Fix scrollbar width affecting auto margin
forced scrollbar presence because when you moved from main page to
a recipe page, the main body shifted (from margin auto) by the width
of the scrollbar, because scrollbar did not exist on main page as it
did not require scrolling...yet. now its forced across the board.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     width: 400px;
-    margin: 0 auto; 
+    margin: 0 auto;
+    overflow:scroll;
 }
 
 .main-body {
